2007-09-03  Ludovic Courtès  <ludo@gnu.org>

	Fix alignment issues which showed up at least on SPARC.

	* socket.c (scm_t_max_sockaddr, scm_t_getsockopt_result): New.
	(scm_inet_pton): Change DST to `scm_t_uint32' for correct
	alignment.
	(scm_getsockopt): Change OPTVAL to `scm_t_getsockopt_result' for
	correct alignment.
	(_scm_from_sockaddr): Change ADDRESS to `scm_t_max_sockaddr *'.
	(scm_from_sockaddr): Cast ADDRESS to `scm_t_max_sockaddr *'.
	(MAX_SIZE_UN, MAX_SIZE_IN6): Removed.
	(scm_accept, scm_getsockname, scm_getpeername, scm_recvfrom):
	Use `scm_t_max_sockaddr' instead of "char max_addr[MAX_ADDR_SIZE]".

2007-09-03  Kevin Ryde  <user42@zip.com.au>

	* numbers.c (scm_log): Test HAVE_CLOG as well as HAVE_COMPLEX_DOUBLE
	before using clog().  It's possible for gcc to provide the "complex
	double" type, but for the system not to have the complex funcs.
	(scm_exp): Ditto HAVE_CEXP for cexp().

2007-09-02  Ludovic Courtès  <ludo@gnu.org>

	* socket.c (scm_make_socket_address): Free C_ADDRESS after use.
	This fixes a memory leak.

2007-08-23  Ludovic Courtès  <ludo@gnu.org>

	* read.c (scm_read_quote): Record position and copy source
	expression when asked to.  Reported by Kevin.

	* stime.c: Define `_REENTRANT' only if not already defined.

2007-08-21  Kevin Ryde  <user42@zip.com.au>

	* gc-card.c (scm_i_card_statistics): Record scm_tc7_number types as
	tc16 values so big, real, complex and fraction can be distinguished.

	(scm_i_tag_name): Return "number" for scm_tc7_number, not NULL.  NULL
	was making numbers come out as "type 23" in gc-live-object-stats.
	Fix tests of the tc16 number types, they were checked under
	scm_tc7_number, but the values went down the tag>=255 smob case.
	Put smob case under scm_tc7_smob instead of using tag>=255, per
	recommendation in comments with scm_tc7_smob to use symbolic values. 
	Use SCM_TC2SMOBNUM to extract scm_smobs index, instead of explicit
	code.  Lose some unnecessary "break" statements.
